--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
   <title>Site com Câmera de Fundo</title>
   <style>
     body, html {
-      margin: 0; padding: 0;
+      margin: 0;
+      padding: 0;
       height: 100%;
       overflow: hidden;
       font-family: Arial, sans-serif;
@@ -18,7 +19,7 @@
       width: 100%;
       height: 100%;
       object-fit: cover;
-      z-index: -1;
+      z-index: -1; /* atrás do conteúdo */
       display: none; /* esconde até iniciar */
     }
     .content {
@@ -49,7 +50,7 @@
 
   <div class="content">
     <h1>Bem-vindo</h1>
-    <p>Para começar, clique abaixo e permita o uso da câmera.</p>
+    <p>Clique abaixo para ativar a câmera como fundo.</p>
     <button id="startCamera">Ativar Câmera</button>
   </div>
 
@@ -57,18 +58,29 @@
     const video = document.getElementById('camera');
     const btn = document.getElementById('startCamera');
 
-    btn.addEventListener('click', () => {
-      navigator.mediaDevices.getUserMedia({ video: { facingMode: "environment" }, audio: false })
-        .then(stream => {
-          video.srcObject = stream;
-          video.style.display = 'block'; // mostra o vídeo após permissão
-          btn.style.display = 'none'; // esconde o botão
-        })
-        .catch(err => {
-          console.error("Erro ao acessar a câmera:", err);
-          alert("Não foi possível acessar a câmera. Verifique permissões.");
-        });
-    });
+    async function startCamera() {
+      let stream = null;
+      try {
+        console.log("Tentando abrir câmera traseira...");
+        stream = await navigator.mediaDevices.getUserMedia({ video: { facingMode: { ideal: "environment" } }, audio: false });
+        console.log("Câmera traseira ativada.");
+      } catch (err1) {
+        console.warn("Câmera traseira não disponível, tentando frontal:", err1);
+        try {
+          stream = await navigator.mediaDevices.getUserMedia({ video: { facingMode: "user" }, audio: false });
+          console.log("Câmera frontal ativada.");
+        } catch (err2) {
+          console.error("Nenhuma câmera disponível:", err2);
+          alert("Não foi possível acessar nenhuma câmera. Verifique permissões e tente em outro navegador.");
+          return;
+        }
+      }
+      video.srcObject = stream;
+      video.style.display = 'block'; // mostra o vídeo após permissão
+      btn.style.display = 'none'; // esconde o botão após iniciar
+    }
+
+    btn.addEventListener('click', startCamera);
   </script>
 
 </body>
