--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
   <video id="camera" autoplay playsinline></video>
 
   <div class="content">
-    <h1>Bem-vindo</h1>
+    <h1>Bem-vindos</h1>
     <p>Clique abaixo para ativar a câmera como fundo.</p>
     <button id="startCamera">Ativar Câmera</button>
   </div>
